k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: amazona
  labels:
    istio-injection: enabled
