k8s/backend-ds.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: amazona
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: adarshjain428/ecombackend:v1
        ports:
          - containerPort: 5000

        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"

        readinessProbe:
          httpGet:
            path: /api/products
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /api/products
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: amazona
spec:
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
