k8s/frontend-ds.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: amazona
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: adarshjain428/ecomfrontend:v1
        ports:
          - containerPort: 80

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "300m"
            memory: "256Mi"

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: amazona
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
