k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: amazona
  namespace: amazona
spec:
  hosts:
  - "*"
  gateways:
  - amazona-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: backend
        port:
          number: 5000

  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend
        port:
          number: 80
